some edits everywhere

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 stable-coin-paper/main.pdf
+stable-coin-paper/main.aux
+stable-coin-paper/main.log
+stable-coin-paper/main.out
+stable-coin-paper/main.pdf
+stable-coin-paper/main.synctex.gz
